FISH-10799 Adjust to older Java APIs